<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="5dp"
        card_view:cardElevation="4dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:padding="8dp"
                  tools:context=".Vista.Detalles.DetailsActivity">

        <TextView
                android:id="@+id/txCommonNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:lines="2"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" android:layout_marginTop="8dp"/>

        <ImageView
                android:id="@+id/photo"
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:contentDescription="@string/imagen" android:layout_margin="8dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/bnVisto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addVistos"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/mapa" android:padding="8dp"/>

            <Button
                    android:id="@+id/mapa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mapa"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/bnVisto"
                    app:layout_constraintRight_toRightOf="parent" android:padding="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
                android:id="@+id/txShortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textColor="#000000" android:textAlignment="center" android:layout_margin="8dp"/>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
            <TextView
                    android:id="@+id/txDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="15"
                    android:textColor="#000000"/>
        </ScrollView>

    </LinearLayout>
</androidx.cardview.widget.CardView>